fix(DataPicker): text overflow in header prevented by enforcing max width 100%

--- a/src/charts/data-picker/DataPickerHeader.css
+++ b/src/charts/data-picker/DataPickerHeader.css
@@ -4,6 +4,7 @@
 .ax-data-picker__header-title {
   display: inline-flex;
   align-items: center;
+  max-width: 100%;
 }
 
 .ax-data-picker__header-title-text {
